# local-browser-tts

./: README.md  main.py  pyproject.toml
.github/workflows/: release.yml
extensions/firefox/: content-script.js  manifest.json  popup.css  popup.html  popup.js
