[project]
name = "local-browser-tts"
version = "0.1.0"
description = "A browser TTS extension that connects to a locally hosted server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audiotsm>=0.1.2",
    "fastapi>=0.115.14",
    "kokoro>=0.9.4",
    "pip>=25.1.1",
    "soundfile>=0.13.1",
    "uvicorn>=0.32.1",
]
